--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -15,14 +15,9 @@
 
 // * PAGE
 @import 'less/page/header.less'; 
-@import 'less/page/banner.less';
-@import 'less/page/ticker.less';  
+@import 'less/page/banner.less'; 
 @import 'less/page/about.less'; 
-@import 'less/page/cta-1.less';                                                                                                              
-@import 'less/page/benefits.less'; 
-@import 'less/page/laje.less';    
-@import 'less/page/cta-2.less';  
-@import 'less/page/projetos.less';                                                                           
-@import 'less/page/cta-3.less';                                                                                                                                      
+@import 'less/page/cta.less';                                                                                                              
+@import 'less/page/benefits.less';                                                                                                                                   
 @import 'less/page/footer.less';   
 @import 'less/page/theme.less';              
