--- a/assets/css/less/page/theme.less
+++ b/assets/css/less/page/theme.less
@@ -1,11 +1,7 @@
 //out: false
 
 body {
-    background-color: #F5F5F5;
-    font-family: "Roboto", sans serif;
-    color: #131312;
+    background-color: #F8FCFF;
+    font-family: "Poppins", sans serif;
+    color: #222222;
 }
-
-@fontR: "Roboto", sans serif;
-@fontB: "Bebas Neue", serif;
-@fontRC: "Roboto Condensed", serif;
