--- a/assets/css/less/page/banner.less
+++ b/assets/css/less/page/banner.less
@@ -1,92 +1,61 @@
 //out: false
 
 .page__banner {
-   background-image: url('../img/bg-banner-desktop.png');
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-position: left -4px top 0;
-   
-   .wrapper {
-      max-width: 1128px;
-      padding-left: 24px;
-      padding-right: 24px;
-      margin-left: auto;
-      margin-right: auto;
-      padding-top: 254px;
-      padding-bottom: 50px;
+    background-image: url('../img/bg-banner.png'), linear-gradient(to bottom, #477AD8 0%, #3A62AA 30%, #0F0F14 100%);
+    background-repeat: no-repeat;
+    background-position: bottom 0 right 80px, top 0 left 0;
+    
+    .wrapper {
+        max-width: 650px;
+        margin-left: 10%;
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-top: 274px;
+        padding-bottom: 207px;
 
-      .content {
-         max-width: 475px;
-         margin-bottom: 100px;
-
-         .title__detail {
-            margin-bottom: 24px;
-         }
-
-         .title {
-            font: 400 72px @fontB;
-            color: #242423;
-            line-height: 94%;
-            letter-spacing: -1.4px;
-            margin-bottom: 16px;
-         }
-
-         .description {
-            font: 16px 400 @fontR;
-            color: #000;
-            line-height: 127%;
-            margin-bottom: 32px;
-         }
-
-         .button {
-            display: flex;
-            align-items: center;
-            gap: 16px;
-            background-color: #F1991D;
-            font: 700 16px @fontR;
+        .title {
+            color: #F0F8FF;
+            font-size: 52px;
+            font-weight: 500;
             line-height: 116%;
-            letter-spacing: 2.6px;
-            color: #F5F5F5;
-            padding: 11px 36px;
-            transition: all linear .15s;
-            width: fit-content;
-            border-radius: 5px;
+            letter-spacing: 2px;
+            margin-bottom: 24px;
 
-            .icon {
-                width: fit-content;
+            span {
+                font-weight: 700;
             }
+        }
+
+        .description {
+            font-size: 20px;
+            color: #F0F8FF;
+            font-weight: 500;
+            letter-spacing: 1px;
+            max-width: 538px;
+            margin-bottom: 38px;
+
+            span {
+                font-weight: 700;
+            }
+        }
+
+        .button {
+            width: 258px;
+            border: 2px solid #F0F8FF;
+            border-radius: 30px;
+            padding: 14px 60px;
+            color: #F0F8FF;
+            text-transform: uppercase;
+            font-weight: 600;
+            font-size: 18px;
+            letter-spacing: 1px;
+            text-align: center;
+            transition: all linear .15s;
 
             &:hover {
-                background-color: #242423;
-                color: #F5F5F5;
+               background-color: #0184FE; 
+               color: #F0F8FF;
             }
-         }
-      }
-
-      .down {
-        width: fit-content;
-        margin-left: auto;
-        margin-right: auto;
-      }
-   }
-
-   @media (max-width: 1200px) {
-      background-image: url('../img/bg-banner-mobile.png');
-      background-position: left 0 top 0;
-
-      .wrapper {
-         padding-top: 205px;
-         padding-bottom: 36px;
-         padding-left: 40px;
-         padding-right: 40px;
-
-         .content {
-            margin-bottom: 180px;
-
-            .title {
-               font-size: 54px;
-            }
-         }
-      }
-   }
+        }
+    }
 }
