--- a/assets/css/less/page/about.less
+++ b/assets/css/less/page/about.less
@@ -1,4 +1,143 @@
 //out: false
 
+.page__functions {
+    padding-top: 100px;
+    padding-bottom: 105px;
 
+    .wrapper {
+        max-width: 1238px;
+        padding-left: 24px;
+        padding-right: 24px;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .title {            
+            font-size: 52px;
+            font-weight: 700;
+            color: #131313;
+            margin-bottom: 8px;
+            text-align: center;
+            position: relative;
+
+            .icon__title {
+                position: absolute;
+                top: -10px;
+                right: -58px;
+            }
+        }
+
+        .subtitle {
+            font-size: 16px;
+            font-weight: 400;
+            color: #222;
+            text-align: center;
+            margin-bottom: 99px;
+
+            span {
+               font-weight: 600; 
+            }
+        }
+
+        .shell {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 60px;
+
+            .content {
+                width: 578px;
+
+                .content__title {
+                    font-size: 42px;
+                    font-weight: 600;
+                    color: #222;
+                    line-height: 129%;
+                    margin-bottom: 16px;
+
+                    span {
+                        color: #0184FE;
+                    }
+                }
+
+                .content__subtitle {
+                    font-size: 20px;
+                    font-weight: 400;
+                    line-height: 140%;
+                    margin-bottom: 32px;
+                    color: #222;
+
+                    span {
+                        font-weight: 600;
+                    }
+                }
+
+                .functions__list {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 24px;
+                    margin-bottom: 42px;
+
+                    .item {
+                        display: flex;
+                        align-items: center;
+                        gap: 16px;
+
+                        .icon {
+                            width: fit-content;
+                        }
+
+                        .text {
+                           font-size: 16px;
+                           font-weight: 400;
+                           color: #222;
+                           
+                           span {
+                              font-weight: 600;
+                           }
+                        }
+                    }
+                }
+
+                .button {
+                    width: 326px;
+                    background-image: linear-gradient(to right, #131313 0%, #090D32 9%, #259DFF 100%);
+                    box-shadow: 4px 6px 7px rgba(48, 48, 48, 10%);
+                    border-radius: 30px;
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    font-size: 18px;
+                    font-weight: 600;
+                    letter-spacing: 1px;
+                    padding: 14px 70px;
+                    text-transform: uppercase;
+                    color: #F0F8FF;
+                    transition: all linear .15s;
+
+                    &:hover {
+                        box-shadow: 4px 6px 25px rgba(48, 48, 48, 50%);
+                        color: #F0F8FF;
+                        cursor: pointer;
+                    }
+                }
+            }
+
+            &.shell-1 {
+                padding-bottom: 96px;
+            }
+
+            &.shell-2 {
+               padding-top: 56px;
+               padding-bottom: 100px; 
+            }
+
+            &.shell-3 {
+                padding-top: 32px;
+            }
+        }
+    }
+}
 
