--- a/assets/css/less/page/banner.less
+++ b/assets/css/less/page/banner.less
@@ -57,5 +57,38 @@
                color: #F0F8FF;
             }
         }
+       
+    }
+
+    @media (max-width: 1200px) {
+        background-image: url('../img/bg-banner-mobile.png'), linear-gradient(to bottom, #477AD8 0%, #3A62AA 30%, #0F0F14 100%);
+        background-repeat: no-repeat;
+        background-position: bottom 0 left 0, top 0 left 0;
+
+        .wrapper {
+            padding-top: 134px;
+            padding-bottom: 442px;
+            padding-left: 21px;
+            padding-right: 21px;
+            margin-left: 0;
+
+            .title {
+                text-align: center;
+                font-size: 30px;
+            }
+
+            .description {
+                text-align: center;
+                font-size: 16px;
+                padding-left: 18px;
+                padding-right: 17px;
+                margin-bottom: 32px;
+            }
+
+            .button {
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
     }
 }
