--- a/assets/css/less/page/header.less
+++ b/assets/css/less/page/header.less
@@ -64,11 +64,12 @@
                 font-weight: 700;
                 letter-spacing: 0.8px;
                 padding: 14px 32px;
+                box-shadow: 4px 6px 7px rgba(48, 48, 48, 10%);
                 transition: all linear .15s;
 
                 &:hover {                    
                     color: #F0F8FF;
-                    box-shadow: 0 0 35px rgba(240, 248, 255, 0.3);
+                    box-shadow: 0 0 20px rgba(240, 248, 255, 0.3);
                 }
             }
 
@@ -81,9 +82,9 @@
     }  
 
     @media screen and (max-width: 1200px) {
-        padding-top: 24px;
 
         .wrapper {
+            padding: 24px 29px 0 30px;
             
             .logo { 
                 width: 167px;
@@ -95,6 +96,9 @@
     
             .is--mobile {
                 flex-grow: 0;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
                 
                 .navbar__hamburguer {
                     display: flex;
@@ -138,15 +142,64 @@
                                 
                                 .overlay__links {
                                     gap: 10px;
+                                    margin-bottom: 64px;
                                     
                                     a {
-                                        font-size: 14px;
+                                        font-size: 16px;
                                         font-weight: 600;
                                         text-align: center;                             
                                         color: #F0F8FF;
+
+                                        &:hover {
+                                            color: #A3D2F9;
+                                        }
                                     }
                                 }
-    
+
+                                .button {
+                                    width: 227px;
+                                    background-color: #259DFF;
+                                    color: #F0F8FF;
+                                    text-transform: uppercase;
+                                    border-radius: 30px;
+                                    display: flex;
+                                    align-items: center;
+                                    gap: 10px;
+                                    font-size: 16px;
+                                    font-weight: 700;
+                                    letter-spacing: 0.8px;
+                                    padding: 14px 32px;
+                                    transition: all linear .15s;
+                                    box-shadow: 4px 6px 7px rgba(48, 48, 48, 10%);
+                                    margin-bottom: 24px;
+                    
+                                    &:hover {                    
+                                        color: #F0F8FF;                                        
+                                    }
+                                }
+
+                                .btn__whats {
+                                    width: 326px;
+                                    background-image: linear-gradient(to right, #131313 0%, #090D32 9%, #259DFF 100%);
+                                    border-radius: 30px;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    gap: 10px;
+                                    padding: 14px 40px;
+                                    color: #F0F8FF;
+                                    text-transform: uppercase;
+                                    font-weight: 600;
+                                    font-size: 18px;
+                                    letter-spacing: 0.5px;
+                                    text-align: center;
+                                    box-shadow: 4px 6px 7px rgba(48, 48, 48, 10%);
+                                    transition: all linear .15s;
+
+                                    &:hover {                    
+                                        color: #F0F8FF;                                        
+                                    }
+                                }   
                                
                             }
                         }
