--- a/assets/css/less/page/about.less
+++ b/assets/css/less/page/about.less
@@ -139,5 +139,71 @@
             }
         }
     }
+
+    @media (max-width: 1200px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+
+        .wrapper {
+            .title {
+                font-size: 32px;
+
+                .icon__title {
+                    width: 30px;
+                    top: -10px;
+                    right: -32px;
+                }
+            }
+
+            .subtitle {
+                margin-bottom: 42px;
+            }
+
+            .shell {
+                flex-direction: column-reverse;
+                align-items: center;
+                gap: 32px;
+
+                &.shell-1 {
+                    padding-bottom: 64px;
+                }
+
+                &.shell-2 {
+                    flex-direction: column;
+                    padding-top: 0;
+                    padding-bottom: 64px;
+                }
+
+                &.shell-3 {
+                    padding: 0;
+                }
+
+                .content {
+                    width: 100%;
+                    text-align: center;
+
+                    .content__title {                        
+                        font-size: 36px;
+                        line-height: 120%;
+                    }
+
+                    .content__subtitle {
+                        font-size: 18px;
+                        line-height: 135%;
+                    }
+
+                    .functions__list {
+                        .item {
+                            text-align: left;
+                        }
+                    }
+                }
+
+                .cover {
+                    width: 100%;
+                }
+            }
+        }
+    }
 }
 
