--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -656,6 +656,57 @@ nav {
 .page__functions .wrapper .shell.shell-3 {
   padding-top: 32px;
 }
+@media (max-width: 1200px) {
+  .page__functions {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .page__functions .wrapper .title {
+    font-size: 32px;
+  }
+  .page__functions .wrapper .title .icon__title {
+    width: 30px;
+    top: -10px;
+    right: -32px;
+  }
+  .page__functions .wrapper .subtitle {
+    margin-bottom: 42px;
+  }
+  .page__functions .wrapper .shell {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 32px;
+  }
+  .page__functions .wrapper .shell.shell-1 {
+    padding-bottom: 64px;
+  }
+  .page__functions .wrapper .shell.shell-2 {
+    flex-direction: column;
+    padding-top: 0;
+    padding-bottom: 64px;
+  }
+  .page__functions .wrapper .shell.shell-3 {
+    padding: 0;
+  }
+  .page__functions .wrapper .shell .content {
+    width: 100%;
+    text-align: center;
+  }
+  .page__functions .wrapper .shell .content .content__title {
+    font-size: 36px;
+    line-height: 120%;
+  }
+  .page__functions .wrapper .shell .content .content__subtitle {
+    font-size: 18px;
+    line-height: 135%;
+  }
+  .page__functions .wrapper .shell .content .functions__list .item {
+    text-align: left;
+  }
+  .page__functions .wrapper .shell .cover {
+    width: 100%;
+  }
+}
 body {
   background-color: #F8FCFF;
   font-family: "Poppins", sans serif;
