--- a/assets/css/less/page/benefits.less
+++ b/assets/css/less/page/benefits.less
@@ -1,2 +1,161 @@
 //out: false
 
+.page__benefits {
+    padding-top: 100px;
+    padding-bottom: 126px;
+    background-image: linear-gradient(to bottom, #090D32, #0184FE);
+    background-repeat: no-repeat;
+    background-size: 100% 405px;
+
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .title {  
+            width: fit-content;          
+            font-size: 52px;
+            font-weight: 600;
+            color: #FFF;
+            margin-bottom: 8px;
+            text-align: center;
+            position: relative;
+
+            .icon__title {
+                position: absolute;
+                top: -10px;
+                right: -58px;
+            }
+        }
+
+        .subtitle {
+            font-size: 16px;
+            font-weight: 400;
+            color: #FFF;
+            text-align: center;
+            margin-bottom: 66px;
+
+            span {
+               font-weight: 600; 
+            }
+        }
+
+        .cards--desktop {
+            max-width: 1220px;
+            padding-left: 24px;
+            padding-right: 24px;
+            justify-content: center;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 30px;
+
+            .benefit__card {
+                width: 258px;
+                height: 242px;
+                border: 1px solid #C0C0C0;
+                border-radius: 20px;
+                background-color: #FFF;
+                padding: 28px 22px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                box-shadow: 10px 10px 25px rgba(34, 34, 34, 15%);
+
+                .card__icon {
+                    width: fit-content;
+                    margin-bottom: 8px;
+                }
+
+                .card__title {
+                    font-size: 20px;
+                    font-weight: 600;
+                    color: #131313;
+                    text-align: center;
+                    margin-bottom: 12px;
+                }
+
+                .card__text {
+                    font-size: 14px;
+                    font-weight: 400;
+                    text-align: center;
+                }
+            }
+        }
+
+        .cards--mobile {
+            display: none;
+        }
+    }
+
+    @media (max-width: 1200px) {
+        padding-top: 66px;
+        padding-bottom: 60px;
+        background-size: 100% 320px;
+
+        .wrapper {
+            .title {
+                font-size: 32px;
+
+                .icon__title {
+                    width: 30px;
+                    top: -10px;
+                    right: -32px;
+                }
+            }
+
+            .subtitle {
+                padding-left: 32px;
+                padding-right: 32px;
+                margin-bottom: 42px;
+            }
+
+            .cards--desktop {
+                display: none;
+            }
+
+            .cards--mobile {
+                display: block;
+                width: 100%;
+
+                .owl-carousel.owl-theme.benefits__carousel {
+
+                    .owl-dots-circle();
+
+                    .benefit__card {
+                        width: 258px;
+                        height: 242px;
+                        border: 1px solid #C0C0C0;
+                        border-radius: 20px;
+                        background-color: #FFF;
+                        padding: 28px 22px;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        box-shadow: 10px 10px 25px rgba(34, 34, 34, 15%);
+        
+                        .card__icon {
+                            width: fit-content;
+                            margin-bottom: 8px;
+                        }
+        
+                        .card__title {
+                            font-size: 20px;
+                            font-weight: 600;
+                            color: #131313;
+                            text-align: center;
+                            margin-bottom: 12px;
+                        }
+        
+                        .card__text {
+                            font-size: 14px;
+                            font-weight: 400;
+                            text-align: center;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
