--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -707,6 +707,164 @@ nav {
     width: 100%;
   }
 }
+.page__benefits {
+  padding-top: 100px;
+  padding-bottom: 126px;
+  background-image: linear-gradient(to bottom, #090D32, #0184FE);
+  background-repeat: no-repeat;
+  background-size: 100% 405px;
+}
+.page__benefits .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.page__benefits .wrapper .title {
+  width: fit-content;
+  font-size: 52px;
+  font-weight: 600;
+  color: #FFF;
+  margin-bottom: 8px;
+  text-align: center;
+  position: relative;
+}
+.page__benefits .wrapper .title .icon__title {
+  position: absolute;
+  top: -10px;
+  right: -58px;
+}
+.page__benefits .wrapper .subtitle {
+  font-size: 16px;
+  font-weight: 400;
+  color: #FFF;
+  text-align: center;
+  margin-bottom: 66px;
+}
+.page__benefits .wrapper .subtitle span {
+  font-weight: 600;
+}
+.page__benefits .wrapper .cards--desktop {
+  max-width: 1220px;
+  padding-left: 24px;
+  padding-right: 24px;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.page__benefits .wrapper .cards--desktop .benefit__card {
+  width: 258px;
+  height: 242px;
+  border: 1px solid #C0C0C0;
+  border-radius: 20px;
+  background-color: #FFF;
+  padding: 28px 22px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 10px 10px 25px rgba(34, 34, 34, 0.15);
+}
+.page__benefits .wrapper .cards--desktop .benefit__card .card__icon {
+  width: fit-content;
+  margin-bottom: 8px;
+}
+.page__benefits .wrapper .cards--desktop .benefit__card .card__title {
+  font-size: 20px;
+  font-weight: 600;
+  color: #131313;
+  text-align: center;
+  margin-bottom: 12px;
+}
+.page__benefits .wrapper .cards--desktop .benefit__card .card__text {
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+}
+.page__benefits .wrapper .cards--mobile {
+  display: none;
+}
+@media (max-width: 1200px) {
+  .page__benefits {
+    padding-top: 66px;
+    padding-bottom: 60px;
+    background-size: 100% 320px;
+  }
+  .page__benefits .wrapper .title {
+    font-size: 32px;
+  }
+  .page__benefits .wrapper .title .icon__title {
+    width: 30px;
+    top: -10px;
+    right: -32px;
+  }
+  .page__benefits .wrapper .subtitle {
+    padding-left: 32px;
+    padding-right: 32px;
+    margin-bottom: 42px;
+  }
+  .page__benefits .wrapper .cards--desktop {
+    display: none;
+  }
+  .page__benefits .wrapper .cards--mobile {
+    display: block;
+    width: 100%;
+  }
+  .page__benefits .wrapper .cards--mobile .owl-carousel.owl-theme.benefits__carousel .owl-dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-top: 30px;
+  }
+  .page__benefits .wrapper .cards--mobile .owl-carousel.owl-theme.benefits__carousel .owl-dots .owl-dot {
+    height: 8px !important;
+    display: flex;
+    align-items: center;
+  }
+  .page__benefits .wrapper .cards--mobile .owl-carousel.owl-theme.benefits__carousel .owl-dots .owl-dot span {
+    margin: 0;
+    width: 8px;
+    height: 8px;
+    background-color: #8c9091;
+    border-radius: 100%;
+  }
+  .page__benefits .wrapper .cards--mobile .owl-carousel.owl-theme.benefits__carousel .owl-dots .owl-dot.active span {
+    background-color: #0184FE;
+  }
+  .page__benefits .wrapper .cards--mobile .owl-carousel.owl-theme.benefits__carousel .owl-dots.disabled {
+    display: none;
+  }
+  .page__benefits .wrapper .cards--mobile .owl-carousel.owl-theme.benefits__carousel .benefit__card {
+    width: 258px;
+    height: 242px;
+    border: 1px solid #C0C0C0;
+    border-radius: 20px;
+    background-color: #FFF;
+    padding: 28px 22px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 10px 10px 25px rgba(34, 34, 34, 0.15);
+  }
+  .page__benefits .wrapper .cards--mobile .owl-carousel.owl-theme.benefits__carousel .benefit__card .card__icon {
+    width: fit-content;
+    margin-bottom: 8px;
+  }
+  .page__benefits .wrapper .cards--mobile .owl-carousel.owl-theme.benefits__carousel .benefit__card .card__title {
+    font-size: 20px;
+    font-weight: 600;
+    color: #131313;
+    text-align: center;
+    margin-bottom: 12px;
+  }
+  .page__benefits .wrapper .cards--mobile .owl-carousel.owl-theme.benefits__carousel .benefit__card .card__text {
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+  }
+}
 body {
   background-color: #F8FCFF;
   font-family: "Poppins", sans serif;
