--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -19,6 +19,7 @@
 @import 'less/page/numbers.less';                                                          
 @import 'less/page/about.less'; 
 @import 'less/page/cta.less';                                                                                                              
-@import 'less/page/benefits.less';                                                                                                                                                                                             
+@import 'less/page/benefits.less';
+@import 'less/page/plans.less';                                                                                                                                                                                                                 
 @import 'less/page/footer.less';   
 @import 'less/page/theme.less';              
