--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -865,6 +865,93 @@ nav {
     text-align: center;
   }
 }
+.page__plans {
+  padding-top: 90px;
+  padding-bottom: 142px;
+  background-image: url('../img/bg-plans.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.page__plans .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.page__plans .wrapper .title {
+  width: fit-content;
+  font-size: 52px;
+  font-weight: 700;
+  color: #FFF;
+  margin-bottom: 8px;
+  text-align: center;
+  position: relative;
+}
+.page__plans .wrapper .title .icon__title {
+  position: absolute;
+  top: -10px;
+  right: -58px;
+}
+.page__plans .wrapper .subtitle {
+  font-size: 16px;
+  font-weight: 400;
+  color: #FFF;
+  text-align: center;
+  margin-bottom: 71px;
+}
+.page__plans .wrapper .subtitle span {
+  font-weight: 600;
+}
+.page__plans .wrapper .plans__cards {
+  display: flex;
+  gap: 88px;
+}
+.page__plans .wrapper .plans__cards .plan__card {
+  position: relative;
+  width: 337px;
+  height: 629px;
+}
+.page__plans .wrapper .plans__cards .plan__card .card__title {
+  position: absolute;
+  width: 226px;
+  left: calc(50% - 113px);
+  top: 0;
+  background-image: linear-gradient(38deg, #131313 1%, #000 26%, #0184FE 100%);
+  border-radius: 20px;
+  padding-top: 8px;
+  padding-bottom: 7px;
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #F0F8FF;
+  text-align: center;
+  z-index: 2;
+}
+.page__plans .wrapper .plans__cards .plan__card .card__content {
+  margin-top: 23px;
+  position: relative;
+  background: transparent;
+  border-radius: 20px;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  z-index: 1;
+  /* Mantém o conteúdo acima do fundo */
+}
+.page__plans .wrapper .plans__cards .plan__card .card__content::before {
+  content: "";
+  position: absolute;
+  inset: -4px;
+  /* Expande a borda para fora */
+  border-radius: 24px;
+  padding: 4px;
+  /* Define a largura da borda */
+  background: linear-gradient(to bottom, #fff, #259dff2a);
+  /* Gradiente da borda */
+  -webkit-mask: linear-gradient(white, white) content-box, linear-gradient(white, white);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+  z-index: -1;
+}
 body {
   background-color: #F8FCFF;
   font-family: "Poppins", sans serif;
